# amulet

./: .geminiignore  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  environment.yml  environment_minimal.yml  pylintrc  pyproject.toml
.github/workflows/: codeql.yaml  monthly-slow.yaml  precommit-main.yaml  precommit-pr.yaml  release.yaml
amulet/attribute_inference/attacks/: __init__.py  attribute_inference_attack.py  duddu_cikm_2022.py
amulet/attribute_inference/metrics/: __init__.py  attack_accuracy.py
amulet/data_reconstruction/attacks/: __init__.py  data_reconstruction_attack.py  fredrikson_ccs_2015.py
amulet/data_reconstruction/metrics/: __init__.py  attack_accuracy.py  similarity_evaluation.py  similary_evaluation.py
amulet/datasets/: __data.py  __image_datasets.py  __init__.py  __tabular_datasets.py  __text_datasets.py  _image_datasets.py  _tabular_datasets.py
amulet/discriminatory_behavior/defenses/: __init__.py  adversarial_debiasing.py  discr_behavior_defense.py
amulet/discriminatory_behavior/metrics/: __init__.py  discriminatory_behavior.py
amulet/distribution_inference/: dataset_utils.py
amulet/distribution_inference/attacks/: __init__.py  distribution_inference.py  distribution_inference_attack.py  suri_evans_2022.py  suri_satml_2023.py  white_box_pim.py
amulet/distribution_inference/metrics/: __init__.py  distinguishing_accuracy.py
amulet/evasion/attacks/: __init__.py  evasion_attack.py  projected_gradient_descent.py
amulet/models/: __init__.py  base.py  binary_net.py  cnn.py  hf_causal_lm.py  hf_text_classifier.py  linear_net.py  resnet.py  vgg.py
amulet/utils/: __base.py  __init__.py  __meta_classifiers.py  __metrics.py  __pipeline.py  __weight_extraction.py  _base.py  _metrics.py  _pipeline.py
artifact/: .gitignore  ARTIFACT.md  CLAIMS.md  RUNTIME.md  run_all.sh  run_experiments.py  run_smoke.sh  setup_assets.py
artifact/common/: config.py  io.py  models.py  paths.py  registry.py
artifact/experimental_setup/: 00macros.tex  04framework.tex  05extensibility.tex  06evaluation.tex
artifact/experiments/: __init__.py  advtr_common.py  shared_targets.py
artifact/make/: make_all.py  make_fig_outrem.py  make_tab_advtr_modext.py  make_tab_attack_results.py  make_tab_attinf_advrtr.py  make_tab_outrem_modext.py  make_tab_textbadnets.py  registry.py  tables_common.py
artifact/tables/: tab_advtr_modext.tex  tab_attack_results.tex  tab_attinf_advrtr.tex  tab_outrem_modext.tex  tab_textbadnets_interactions.tex
artifact/tests/: conftest.py
docs/: CONTRIBUTING.md  GETTING_STARTED.md  MODULE_GUIDE.md
docs/module_guide/: 1_INTRO.md  2_EVASION.md  3_POISONING.md  4_UNAUTHORIZED_MODEL_OWNERSHIP.md  5_MEMBERSHIP_INFERENCE.md  6_ATTRIBUTE_INFERENCE.md  7_DISTRIBUTION_INFERENCE.md  8_DATA_RECONSTRUCTION.md  9_DISCRIMINATORY_BEHAVIOR.md
examples/: get_started.py
examples/attack_pipelines/: run_attribute_inference.py  run_data_recon.py  run_distribution_inference.py  run_evasion.py  run_membership_inference.py  run_model_extraction.py  run_poisoning.py  run_text_backdoor.py  run_whitebox_dist_inference.py
examples/defense_pipelines/: run_adversarial_debiasing.py  run_adversarial_training.py  run_dp_sgd.py  run_fingerprint.py  run_outlier_removal.py  run_watermark.py
examples/extending_amulet/: custom_architecture.md  custom_metric.md  custom_risk.md
examples/interactions/: adv_training_attinf.py  adv_training_data_recon.py  adv_training_discr_behav.py  adv_training_evasion.py  adv_training_model_extr.py  adv_training_poisoning.py  gp_fairness_data_recon.py  gp_fairness_discr_behav.py  gp_fairness_evasion.py  gp_fairness_model_extr.py  out_rem_attrinf.py  out_rem_data_recon.py  out_rem_discr_behav.py  out_rem_evasion.py  out_rem_model_extr.py  out_rem_poisoning.py
examples/risk_pipelines/: run_attribute_inference.py  run_data_recon.py  run_discr_behavior.py  run_distribution_inference.py  run_evasion.py  run_membership_inference.py  run_model_extraction.py  run_poisoning.py
miscellaneous/trigger_set/: labels.csv
tests/: conftest.py  test_api_conformance.py
tests/attribute_inference/: test_attack_accuracy.py  test_duddu_cikm_2022.py
tests/data_reconstruction/: test_fredrikson_ccs_2015.py  test_similarity_evaluation.py
tests/datasets/: conftest.py  test_celeba.py  test_downloads.py  test_lfw.py  test_utkface.py
tests/discriminatory_behavior/: test_adversarial_debiasing.py  test_discriminatory_behavior.py
tests/distribution_inference/: conftest.py  test_dataset_utils.py  test_distinguishing_accuracy.py  test_distribution_inference_attack.py  test_suri_evans_2022.py  test_white_box_pim.py
tests/evasion/: test_adversarial_training_pgd.py  test_evasion_pgd.py
tests/integration/: test_celeba_datasets.py  test_discriminatory_behavior.py  test_evasion.py  test_lfw_datasets.py  test_membership_inference.py  test_other_risks.py  test_poisoning.py  test_unauth_ownership.py  test_utkface_datasets.py  test_whitebox_pim.py
tests/membership_inference/: test_dp_sgd.py  test_lira.py
tests/models/: test_hf_causal_lm.py
tests/poisoning/: conftest.py  test_onion.py  test_outlier_removal.py  test_text_backdoor_integration.py  test_text_badnets.py
tests/unauth_model_ownership/: test_fingerprint.py  test_model_extraction.py  test_watermark.py
tests/unit/: test_base.py  test_celeba_datasets.py  test_dataset_dataclass.py  test_distribution_dataset_utils.py  test_distribution_inference_attack_base.py  test_lfw_datasets.py  test_meta_classifiers.py  test_metrics_attribute.py  test_metrics_discriminatory.py  test_metrics_distribution.py  test_metrics_extraction.py  test_metrics_mi.py  test_metrics_shared.py  test_outlier_removal.py  test_pipeline_createdir.py  test_pipeline_init.py  test_pipeline_split.py  test_poisoning_badnets.py  test_suri_evans_2022.py  test_utkface_datasets.py  test_weight_extraction.py  test_white_box_pim.py
tests/utils/: test_meta_classifiers.py  test_metrics.py  test_pipeline.py
(+86 files in other folders)
